@@ -48,7 +48,7 @@ enum
 typedef struct reg_info
 {
   short type;                   /* can have value
-                                   REG_GPR, REG_PTR or REG_CND */
+                                   REG_GPR, REG_BIT, REG_PTR or REG_CND */
   short rIdx;                   /* index into register table */
   short otype;
   char *name;                   /* name */
