@@ -1,5 +1,11 @@
 2018-03-22 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/mcs51/gen.c,
+	  src/SDCCast.c
+	  Improve code generation for _Bool.
+
+2018-03-22 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/mcs51/ralloc.c:
 	  Make better use of acc for 8-bit operands.
 	* src/SDCCopt.c:
